<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lnUtilities"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_google_maps"
                    android:contentDescription="@string/default_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/location"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_file_flat"
                    android:contentDescription="@string/default_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/document"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_clock_flat"
                    android:contentDescription="@string/default_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/repeat"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnBusinessCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_business_card_flat"
                    android:contentDescription="@string/default_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/business_card"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lnVote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_vote_flat"
                    android:contentDescription="@string/default_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/vote"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>